# agent-pay-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md
examples/: quickstart.py
src/agent_pay/: __init__.py  bolt11.py  client.py  envelope.py  jcs.py  jws.py  keys.py  lightning.py  lnd_rest.py  memory_node.py  replay.py  server.py  token.py
tests/: _harness.py  test_bolt11.py  test_client.py  test_conformance.py  test_e2e.py  test_envelope.py  test_jcs.py  test_jws.py  test_keys.py  test_memory_node.py  test_replay.py  test_server.py  test_smoke.py  test_token.py
vectors/: c1-invalid-jws.json  c1-missing-did-invoice.json  c2-roundtrip.json  c3-replayed-preimage.json  c4-bolt11-hash-mismatch.json
